--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>Software Manager</h1>
+<p>To help manage and track releases</p>
+<%= link_to "Software", softwares_path %>
