--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,7 @@
 </head>
 <body>
 
-<%= render 'devise/menu/login_items' %>
-<%= link_to "Software", softwares_path %>
+<%= render 'home/menu_items' %>
 <%= yield %>
 
 </body>
