--- a/app/views/softwares/index.html.erb
+++ b/app/views/softwares/index.html.erb
@@ -3,6 +3,7 @@
 <table>
   <tr>
     <th>Name</th>
+    <th>Latest</th>
     <th></th>
     <th></th>
     <th></th>
@@ -11,6 +12,7 @@
 <% @softwares.each do |software| %>
   <tr>
     <td><%= software.name %></td>
+    <td><%= software.versions.first %></td>
     <td><%= link_to 'Show', software %></td>
     <td><%= link_to 'Edit', edit_software_path(software) %></td>
     <td><%= link_to 'Destroy', software, method: :delete, data: { confirm: 'Are you sure?' } %></td>
